--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
     <!--========== HEADER ==========-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/portfolio.html" class="nav-logo">
+            <a href="/index.html" class="nav-logo">
                 <span class="logo-drop">
                     <img src="/assets/img/logo.png" />
                 </span>
@@ -30,7 +30,7 @@
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="/portfolio.html" class="nav-link">Portfolio</a>
+                        <a href="/index.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a href="/about.html" class="nav-link">About</a>
