--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="/index.html" class="nav-logo">
+      <a href="index.html" class="nav-logo">
         <span class="logo-drop">
-          <img src="/assets/img/logo.png" alt="Logo" />
+          <img src="assets/img/logo.png" alt="Logo" />
         </span>
       </a>
 
       <div class="nav-menu" id="nav-menu">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="/index.html" class="nav-link active-link">Portfolio</a>
+            <a href="index.html" class="nav-link active-link">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="/about.html" class="nav-link">About</a>
+            <a href="about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="/contact.html" class="nav-link">Contact</a>
+            <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
 
@@ -57,8 +57,8 @@
   <main class="main" id="top">
     <!--==================== HOME ====================-->
     <section class="home section">
-      <img src="/assets/img/portfolio/title.png" alt="Title" class="home-img" />
-      <img src="/assets/img/portfolio/default-me.png" data-hover="/assets/img/portfolio/hover-me.png" alt="Character"
+      <img src="assets/img/portfolio/title.png" alt="Title" class="home-img" />
+      <img src="assets/img/portfolio/default-me.png" data-hover="assets/img/portfolio/hover-me.png" alt="Character"
         class="me-img" />
     </section>
 
@@ -68,19 +68,19 @@
         <!--filters-->
         <div class="portfolio-filters container">
           <a data-name="all" class="slide-btn active">
-            <img src="/assets/img/portfolio/all-icon.png" alt="All" />
+            <img src="assets/img/portfolio/all-icon.png" alt="All" />
             <span>All</span>
           </a>
           <a data-name="games" class="slide-btn">
-            <img src="/assets/img/portfolio/games-icon.png" alt="Games" />
+            <img src="assets/img/portfolio/games-icon.png" alt="Games" />
             <span>Games</span>
           </a>
           <a data-name="3d" class="slide-btn">
-            <img src="/assets/img/portfolio/3d-icon.png" alt="3D" />
+            <img src="assets/img/portfolio/3d-icon.png" alt="3D" />
             <span>3D</span>
           </a>
           <a data-name="2d" class="slide-btn">
-            <img src="/assets/img/portfolio/2d-icon.png" alt="2D" />
+            <img src="assets/img/portfolio/2d-icon.png" alt="2D" />
             <span>2D</span>
           </a>
         </div>
@@ -93,11 +93,11 @@
   </main>
 
   <!--==================== FOOTER ====================-->
-  <footer class="footer" style="--ft-image: url('/assets/img/Background.png')">
+  <footer class="footer" style="--ft-image: url('assets/img/Background.png')">
     <div class="footer-container container">
-      <a href="/contact.html" class="pop-btn">
+      <a href="contact.html" class="pop-btn">
         <span class="pop-icon pop-icon--footer">
-          <img src="/assets/img/reach-icon.png" alt="Reach out" />
+          <img src="assets/img/reach-icon.png" alt="Reach out" />
         </span>
         <span class="pop-label">Reach out!</span>
       </a>
@@ -127,8 +127,8 @@
   </a>
 
   <!--=============== MAIN JS ===============-->
-  <script src="/assets/js/main.js"></script>
-  <script src="/assets/js/cards.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/cards.js"></script>
 </body>
 
 </html>
