--- a/work.html
+++ b/work.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
 
     <!--=============== REMIXICONS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
     <title>Forgach Rebeka - Portfolio</title>
 </head>
@@ -21,22 +21,22 @@
     <!--========== HEADER ==========-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="/index.html" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <span class="logo-drop">
-                    <img src="/assets/img/logo.png" />
+                    <img src="assets/img/logo.png" />
                 </span>
             </a>
 
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="/index.html" class="nav-link">Portfolio</a>
+                        <a href="index.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/about.html" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/contact.html" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="nav-close" id="nav-close"><i class="ri-close-line"></i></div>
@@ -59,7 +59,7 @@
 
                     <h2 class="work-title">EtherLocked</h2>
                     <a href="#" class="slide-btn">
-                        <img src="/assets/img/about/download-icon.png" />
+                        <img src="assets/img/about/download-icon.png" />
                         <span>Play it!</span>
                     </a>
                 </div>
@@ -138,7 +138,7 @@
 
             <a href="contact.html" class="pop-btn">
                 <span class="pop-icon pop-icon--footer">
-                    <img src="/assets/img/reach-icon.png" />
+                    <img src="assets/img/reach-icon.png" />
                 </span>
                 <span class="pop-label">Reach out!</span>
             </a>
@@ -165,11 +165,11 @@
     </footer>
 
     <!--=============== JS ===============-->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/works.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/works.js"></script>
 
     <!--=============== JS ===============-->
-    <script src="/assets/json/works.json"></script>
+    <script src="assets/json/works.json"></script>
 </body>
 
 </html>
