--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
                     <a id="download-cv" href="assets/img/Forgach_Rebeka_CV.pdf" download="Forgach_Rebeka_CV.pdf"
                         class="slide-btn">
-                        <img src="/assets/img/about/download-icon.png" />
+                        <img src="assets/img/about/download-icon.png" />
                         <span>DOWNLOAD CV</span>
                     </a>
                 </div>
@@ -95,7 +95,7 @@
                     My interests
                 </h3>
                 <li class="interests-item">
-                    <img src="/assets/img/about/nature-icon.png" />
+                    <img src="assets/img/about/nature-icon.png" />
                     <p>
                         <span class="accent">Nature Lover:</span> I'm more of a <span>mountain person</span> than a
                         beach person. I love trying
@@ -104,7 +104,7 @@
                     </p>
                 </li>
                 <li class="interests-item">
-                    <img src="/assets/img/about/photo-icon.png" />
+                    <img src="assets/img/about/photo-icon.png" />
                     <p>
                         <span class="accent">Photography:</span> I occasionally <span>take pictures</span>, capturing
                         moments and scenes that
@@ -118,7 +118,7 @@
                     Professional Traits
                 </h3>
                 <li class="interests-item">
-                    <img src="/assets/img/about/team-icon.png" />
+                    <img src="assets/img/about/team-icon.png" />
                     <p>
                         <span class="accent">Team Player:</span> Coming from a <span>big family</span>, I've learned the
                         importance of
@@ -128,7 +128,7 @@
                     </p>
                 </li>
                 <li class="interests-item">
-                    <img src="/assets/img/about/individual-icon.png" />
+                    <img src="assets/img/about/individual-icon.png" />
                     <p>
                         <span class="accent">Independent Worker:</span> While I enjoy being part of a <span>team</span>,
                         when it comes to working on
@@ -165,11 +165,11 @@
         </section>
     </main>
     <!--==================== FOOTER ====================-->
-    <footer class="footer" style="--ft-image: url('../img/Background.png')">
+    <footer class="footer" style="--ft-image: url('assets/img/Background.png')">
         <div class="footer-container container">
             <a href="contact.html" class="pop-btn">
                 <span class="pop-icon pop-icon--footer">
-                    <img src="/assets/img/reach-icon.png" />
+                    <img src="assets/img/reach-icon.png" />
                 </span>
                 <span class="pop-label">Reach out!</span>
             </a>
