--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </main>
 
   <!--==================== FOOTER ====================-->
-  <footer class="footer" style="--ft-image: url('assets/img/Background.png')">
+  <footer class="footer" style="--ft-image: url('../img/background.png')">
     <div class="footer-container container">
       <a href="contact.html" class="pop-btn">
         <span class="pop-icon pop-icon--footer">
