--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
         </section>
     </main>
     <!--==================== FOOTER ====================-->
-    <footer class="footer" style="--ft-image: url('assets/img/Background.png')">
+    <footer class="footer" style="--ft-image: url('../img/background.png')">
         <div class="footer-container container">
             <a href="contact.html" class="pop-btn">
                 <span class="pop-icon pop-icon--footer">
