--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <nav class="nav container">
             <a href="index.html" class="nav-logo">
                 <span class="logo-drop">
-                    <img src="assets/img/Logo.png" />
+                    <img src="assets/img/logo.png" />
                 </span>
             </a>
 
