--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+  <div id="preloader"></div>
+
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
