--- a/work.html
+++ b/work.html
@@ -63,25 +63,43 @@
                         <span>Play it!</span>
                     </a>
                 </div>
+                <div class="work-details container">
+                    <div class="work-detail">
+                        <span class="work-detail-label">Type:</span>
+                        <p class="work-detail-info">
+                            School project<br>2024–2025
+                        </p>
+                    </div>
 
-                <p class="work-description">
-                    EtherLocked follows the story of a <span>teenage boy</span> who accidentally <span>escapes his
-                        body</span> one
-                    night. <span>Before sunrise</span>,
-                    the player must solve a series of <span>puzzles</span> to guide him back to his body.
-                </p>
-            </div>
-        </section>
-        <!--========== IMAGE GALLERY ==========-->
-        <section class="picture">
-            <div class="picture-gallery">
-                <div class="picture-container grid">
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
+                    <div class="work-detail">
+                        <span class="work-detail-label">Role:</span>
+                        <ul class="contribution-list">
+                            <li>Environment art</li>
+                            <li>3D models</li>
+                            <li>Level Design</li>
+                            <li>In-game UI</li>
+                            <li>Billboarding</li>
+                            <li>Main Menu UI & UX</li>
+                            <li>Modular Environment Kit</li>
+                            <li>Concept Art</li>
+                        </ul>
+                    </div>
+
+                    <div class="work-detail">
+                        <span class="work-detail-label">Team:</span>
+                        <ul class="team-list">
+                            <li>Rebeka Forgách</li>
+                            <li>Evelīna Graumane</li>
+                            <li>Elīza Drāzniece</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <p class="work-description2 container">
+        </section>
+        <!--========== WORK DESCRIPTION ==========-->
+        <section class="picture">
+            <h3 class="section-subtitle">My Contributions</h3>
+            <p class="work-description container">
                 EtherLocked is a <span>first-person puzzle</span> game that I developed together <span>with two
                     classmates</span> over the course of a
                 <span>year</span> as a <span>school project</span>. Working in a small team of three gave us the chance
@@ -90,22 +108,18 @@
                 <span>development</span> closely, from <span>concept to final build</span>, while each of us took on
                 <span>multiple roles</span>.
             </p>
+            <div class="picture-gallery">
+                <div class="picture-container grid">
+                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
+                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
+                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
+                </div>
+            </div>
         </section>
 
 
         <!--========== CONTRIBUTIONS ==========-->
         <section class="contributions">
-            <div class="container">
-                <h3 class="section-subtitle">My Contributions</h3>
-                <ul class="contribution-list">
-                    <li>User Interface Design</li>
-                    <li>User Experience Design</li>
-                    <li>3D Models & Textures</li>
-                    <li>Modular Environment Kit</li>
-                    <li>Outdoor Scenery (Billboarding)</li>
-                    <li>Main Menu (UI, UX, Programming)</li>
-                </ul>
-            </div>
             <div class="picture-gallery">
                 <div class="picture-container grid">
                     <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
