--- a/work.html
+++ b/work.html
@@ -14,6 +14,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
+    <link rel="shortcut icon" href="assets/img/web-logo.png" type="x-icon" />
     <title>Forgach Rebeka - Portfolio</title>
 </head>
 
