--- a/work.html
+++ b/work.html
@@ -98,15 +98,16 @@
             </div>
         </section>
         <!--========== WORK DESCRIPTION ==========-->
+        <hr class="section-divider" />
+
         <section class="picture">
             <h3 class="section-subtitle">My Contributions</h3>
             <p class="work-description container">
                 EtherLocked is a <span>first-person puzzle</span> game that I developed together <span>with two
-                    classmates</span> over the course of a
-                <span>year</span> as a <span>school project</span>. Working in a small team of three gave us the chance
-                to
-                explore <span>every stage</span> of
-                <span>development</span> closely, from <span>concept to final build</span>, while each of us took on
+                    classmates</span> over the course
+                of a <span>year</span> as a <span>school project</span>. Working in a small team of three gave us the
+                chance to explore every
+                stage of development closely, from <span>concept to final build</span>, while each of us took on
                 <span>multiple roles</span>.
             </p>
             <div class="picture-gallery">
@@ -118,33 +119,37 @@
             </div>
         </section>
 
-
-        <!--========== CONTRIBUTIONS ==========-->
-        <section class="contributions">
-            <div class="picture-gallery">
-                <div class="picture-container grid">
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 4" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 5" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 6" class="picture-img" />
-                </div>
-            </div>
-        </section>
-
         <!--========== TOOLS USED ==========-->
         <div class="container tools">
             <h3 class="section-subtitle">Tools Used</h3>
             <div class="tool-icons">
-                <img src="../EtherLocked/unity.png" alt="Unity" />
-                <img src="../EtherLocked/substance.png" alt="Substance Painter" />
-                <img src="../EtherLocked/zbrush.png" alt="ZBrush" />
-                <img src="../EtherLocked/illustrator.png" alt="Illustrator" />
-                <img src="../EtherLocked/blender.png" alt="Blender" />
-                <img src="../EtherLocked/procreate.png" alt="Procreate" />
+                <div class="tool">
+                    <img src="../EtherLocked/unity.png" alt="Unity" />
+                    <span>Unity</span>
+                </div>
+                <div class="tool">
+                    <img src="../EtherLocked/substance.png" alt="Substance Painter" />
+                    <span>Substance Painter</span>
+                </div>
+                <div class="tool">
+                    <img src="../EtherLocked/zbrush.png" alt="ZBrush" />
+                    <span>ZBrush</span>
+                </div>
+                <div class="tool">
+                    <img src="../EtherLocked/illustrator.png" alt="Illustrator" />
+                    <span>Illustrator</span>
+                </div>
+                <div class="tool">
+                    <img src="../EtherLocked/blender.png" alt="Blender" />
+                    <span>Blender</span>
+                </div>
+                <div class="tool">
+                    <img src="../EtherLocked/procreate.png" alt="Procreate" />
+                    <span>Procreate</span>
+                </div>
             </div>
         </div>
+
     </main>
 
     <!--==================== FOOTER ====================-->
@@ -182,9 +187,6 @@
     <!--=============== JS ===============-->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/works.js"></script>
-
-    <!--=============== JS ===============-->
-    <script src="assets/json/works.json"></script>
 </body>
 
 </html>
