--- a/work.html
+++ b/work.html
@@ -111,7 +111,7 @@
                 <span>multiple roles</span>.
             </p>
             <div class="picture-gallery">
-                <div class="picture-container grid">
+                <div class="picture-container picture-container--4 grid">
                     <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
                     <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
                     <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
