--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
     <main class="main" id="top">
 
         <!--========== PROJECT SECTION ==========-->
-        <section class="work" style="--bg-image: url('../work/EtherLocked/EtherLocked-bg.png')">
+        <section class="work" style="--bg-image: url('assets/img/EtherLocked/EtherLocked-bg.png')">
             <div class="intro container">
                 <div class="title-container">
 
@@ -112,9 +112,9 @@
             </p>
             <div class="picture-gallery">
                 <div class="picture-container picture-container--4 grid">
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
-                    <img src="../EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
+                    <img src="assets/img/EtherLocked/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
+                    <img src="assets/img/EtherLocked/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
+                    <img src="assets/img/EtherLocked/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
                 </div>
             </div>
         </section>
@@ -124,27 +124,27 @@
             <h3 class="section-subtitle">Tools Used</h3>
             <div class="tool-icons">
                 <div class="tool">
-                    <img src="../EtherLocked/unity.png" alt="Unity" />
+                    <img src="assets/img/EtherLocked/unity.png" alt="Unity" />
                     <span>Unity</span>
                 </div>
                 <div class="tool">
-                    <img src="../EtherLocked/substance.png" alt="Substance Painter" />
+                    <img src="assets/img/EtherLocked/substance.png" alt="Substance Painter" />
                     <span>Substance Painter</span>
                 </div>
                 <div class="tool">
-                    <img src="../EtherLocked/zbrush.png" alt="ZBrush" />
+                    <img src="assets/img/EtherLocked/zbrush.png" alt="ZBrush" />
                     <span>ZBrush</span>
                 </div>
                 <div class="tool">
-                    <img src="../EtherLocked/illustrator.png" alt="Illustrator" />
+                    <img src="assets/img/EtherLocked/illustrator.png" alt="Illustrator" />
                     <span>Illustrator</span>
                 </div>
                 <div class="tool">
-                    <img src="../EtherLocked/blender.png" alt="Blender" />
+                    <img src="assets/img/EtherLocked/blender.png" alt="Blender" />
                     <span>Blender</span>
                 </div>
                 <div class="tool">
-                    <img src="../EtherLocked/procreate.png" alt="Procreate" />
+                    <img src="assets/img/EtherLocked/procreate.png" alt="Procreate" />
                     <span>Procreate</span>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer" style="--ft-image: url('../work/EtherLocked/EtherLocked-bg.png')">
+    <footer class="footer">
         <div class="footer-container container">
 
             <a href="contact.html" class="pop-btn">
