--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             <!-- Picture, CV button and text -->
             <div class="about-me container grid">
                 <div class="about-picture">
-                    <img src="assets/img/about/face.JPG" alt="image" class="about-img">
+                    <img src="assets/img/about/face.png" alt="image" class="about-img">
 
                     <a id="download-cv" href="assets/img/Forgach_Rebeka_CV.pdf" download="Forgach_Rebeka_CV.pdf"
                         class="slide-btn">
