--- a/work.html
+++ b/work.html
@@ -65,6 +65,7 @@
                     </a>
                 </div>
                 <div class="work-details container">
+                    <!-- existing blocks -->
                     <div class="work-detail">
                         <span class="work-detail-label">Type:</span>
                         <p class="work-detail-info">
@@ -77,12 +78,7 @@
                         <ul class="contribution-list">
                             <li>Environment art</li>
                             <li>3D models</li>
-                            <li>Level Design</li>
-                            <li>In-game UI</li>
-                            <li>Billboarding</li>
-                            <li>Main Menu UI & UX</li>
-                            <li>Modular Environment Kit</li>
-                            <li>Concept Art</li>
+                            <!-- … -->
                         </ul>
                     </div>
 
